--- a/Grid.css
+++ b/Grid.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-column-gap: 50px;
+  grid-gap: 50px;
   grid-template-columns: auto auto auto;
   background-color: #2196F3;
   padding: 10px;
